--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.home{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.create_form input{
+    width:300px;
+    padding: 10px;
+    border-bottom: 2px solid;
+    outline: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.create_form button{
+    padding: 10px;
+    background-color: black;
+    color:white;
+    cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.task {
+    display: flex;
+    align-items: center;
+    width: 345px;
+    justify-content: space-between;
+    background-color: black;
+    color:white;
+    height: 35px;
+    padding: 2px 5px 2px 5px;
+    margin-top: 2px;
 }
-
-.App-link {
-  color: #61dafb;
+.checkbox{
+    display: flex;
+    align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox .icon{
+    margin-right: 5px;
+    font-size: 15px;
+}
+.task div span{
+    margin: 0px 5px 0px 4px;
+}
+.task div .icon{
+    cursor: pointer;
+}
+.line_through{
+    text-decoration: line-through;
 }
